# maf-workflow

./: .env.sample  README.md  Taskfile.yml  WORKFLOW.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
maf_workflow/: executors.py  hosting.py  workflow.py
maf_workflow/agents/: customer_agent.py  intent_detection_agent.py
maf_workflow/models/: intent_detection_result.py  question_response.py
maf_workflow/protocols/: i_azure_open_ai_chat_client_service.py
maf_workflow/services/: azure_open_ai_chat_client_service.py
samples/: README.md  concurrent_agent_calls.py  custom_context_providers.py  fan_in_fan_out.py  middleware.py  multi_turns_conversation.py  sequential_flow.py  tools.py
tests/maf_workflow/models/: test_intent_detection_result.py  test_question_response.py
tests/maf_workflow/services/: test_azure_open_ai_chat_client_service.py
